Fix stars click on mobile (android chrome)

--- a/smsSurvery.Surveryer/Content/survey.css
+++ b/smsSurvery.Surveryer/Content/survey.css
@@ -169,7 +169,7 @@ footer {
 
 /* STAR */
 .star {
-    display: inline;
+    display: inline-block;
 }
 
 .starImg {
